--- a/src/components/Socials/Socials.css
+++ b/src/components/Socials/Socials.css
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    gap: 2rem;
+    gap: 2.1rem;
   }
 
   .social {
